<resources>
    <string name="app_name">Onetome</string>
    <string name="name_menu">Onetome</string>
    <string name="name_saludar">Saludo</string>
    <string name="name_conversor">Conversor</string>
    <string name="name_contador">Contador</string>
    <string name="btnSaludar">Saludar</string>
    <string name="btnDevolver">Atras</string>
    <string name="btnConversor">Conversor</string>
    <string name="btnContador">Contador</string>
    <string name="btnSalir">Salir</string>
    <string name="convertir">Convertir</string>
    <string name="conversor">Conversor</string>
    <string name="clp">CLP</string>
    <string name="textview">TextView</string>
    <string name="convertirs">Convertir</string>
    <string name="btnFormulario">Formulario</string>
    <string name="tituloMenu">Menu Principal</string>
</resources>