<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender_gray"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/steel_teal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:contentDescription="ImagenMENU"
            app:srcCompat="@mipmap/ic_launcher_foreground"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="109dp"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:paddingTop="35dp"
            android:paddingRight="10dp"
            android:text="@string/tituloMenu"
            android:textAlignment="center"
            android:textSize="34sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="368dp"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="5dp"
            android:text="@string/btnSalir" />

        <Button
            android:id="@+id/btnFormulario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="5dp"
            android:text="@string/btnFormulario" />

        <Button
            android:id="@+id/btnConversor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="5dp"
            android:text="@string/btnConversor"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btnContador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="5dp"
            android:text="@string/btnContador" />

        <Button
            android:id="@+id/btnSaludar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="5dp"
            android:text="@string/btnSaludar" />
    </LinearLayout>

</LinearLayout>